<resources>
    <string name="app_name">Getfit</string>
    <string name="tab_text_1">Mi estado físico</string>
    <string name="tab_text_2">Mi alimentación</string>
    <string name="tab_text_3">Mis comidas</string>
    <string name="action_settings">Configuración</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_resultado_calculadora_requerimientos">Mis resultados</string>
    <string name="error_required">es requerido o tiene un valor erróneo</string>
    <string name="label_unidad_medida">Mi unidad de medida:</string>
    <string name="label_medidas_actuales">Mis medidas actuales:</string>
    <string name="hint_peso">Peso</string>
    <string name="hint_altura">Altura</string>
    <string name="label_sexo">Biológicamente soy:</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="error_default_required">Este campo es requerido.</string>
    <string name="tv_mujer">Mujer</string>
    <string name="tv_hombre">Hombre</string>
    <string name="sp_medida_cm_y_kg">Centímetros y Kilogramos (cm - kg)</string>
    <string name="sp_medida_in_y_lb">Pulgadas y Libras (in - lb)</string>
    <string name="toat_error_validation">¡Revisa los datos ingresados!</string>
    <string name="preferencias_de_datos">Preferencias de datos</string>
    <string name="mi_unidad_de_medida">Mi unidad de medida</string>
    <string name="preferencias_del_dispositivo">Preferencias del dispositivo</string>
    <string name="habilitar_vibracion">Habilitar vibración</string>
    <string name="habilitar_sonido">Habilitar sonido</string>
    <string name="actualizar_preferencias">¡Se han actualizado las preferencias!</string>
    <string name="actualizar">Actualizar</string>
    <string name="mi_configuracion_title">Mi configuración</string>
    <string name="mi_actividad_fisica_semanal">Mi actividad fisica semanal</string>
    <string name="hint_edad">Edad</string>
    <string name="label_mis_datos_actuales">Mis datos actuales:</string>
    <string name="litros">Litros</string>
    <string name="txt_water">2.0</string>
    <string name="label_mi_consumo_diario_de_liquidos">Mi consumo diario de líquidos</string>
    <string name="label_mi_consumo_cal_rico_diario">Mi consumo calórico diario</string>
    <string name="txt_0_a_2_horas">0 a 2 Horas</string>
    <string name="txt_3_a_5_horas">3 a 5 Horas</string>
    <string name="txt_6_a_27_horas">6 a 27 Horas</string>
    <string name="txt_28_horas">+28 Horas</string>
    <string name="txt_sedentaria">Sedentaria</string>
    <string name="txt_liviana">Liviana</string>
    <string name="txt_moderada">Moderada</string>
    <string name="txt_intensa">Intensa</string>
    <string name="txt_estas">Estás</string>
    <string name="txt_sobre_tu_peso_ideal">sobre tu peso ideal</string>
    <string name="txt_bajo_tu_peso_ideal">bajo tu peso ideal</string>
    <string name="txt_en_tu_peso_ideal">Felicitaciones, estás en tu peso ideal</string>
    <string name="imc_delgadez_severa">Delgadez severa</string>
    <string name="imc_delgadez_moderada">Delgadez moderada</string>
    <string name="imc_delgadez_aceptable">Delgadez aceptable</string>
    <string name="imc_normal">Peso Normal</string>
    <string name="imc_sobrepeso">Sobrepeso</string>
    <string name="imc_obeso_tipo1">Obeso tipo I</string>
    <string name="imc_obeso_tipo2">Obeso tipo II</string>
    <string name="imc_obeso_tipo3">Obeso tipo III</string>
    <string name="title_slide_1">¡Bienvenido!</string>
    <string name="content_slide_1">Es un placer tenerte con nosotros…</string>
    <string name="title_slide_2">¿Que es GETFIT?</string>
    <string name="content_slide_2">GETFIT es una herramienta que te ayudará a estimar tu estado fisico y tus requerimientos nutricionales en sólo 1 click.</string>
    <string name="title_slide_4">¡Resultados íntegros!</string>
    <string name="content_slide_4">Utilizamos las mismas formulas que los profesionales, recomendadas por la FAO y OMS.</string>
    <string name="title_slide_5">¡Calificanos!</string>
    <string name="content_slide_5">Tu opinión es importante para mejorar, no olvides calificarnos y aportar sugerencias para mejorar GETFIT.</string>
    <string name="title_slide_6">¡Empecemos!</string>
    <string name="content_slide_6">Ahora vamos a definir el tipo de medidas que utilizarás en la aplicación, luego podrás cambiarlo en ajustes.</string>
    <string name="label_desayuno">DESAYUNO</string>
    <string name="label_entre_comidas">Colación</string>
    <string name="label_almuerzo">ALMUERZO</string>
    <string name="label_once">ONCE</string>
    <string name="label_cena">CENA</string>
    <string name="label_minimo_aceptable">Peso mínimo aceptable</string>
    <string name="label_peso_ideal">Peso ideal</string>
    <string name="label_peso_m_ximo_aceptable">Peso máximo aceptable</string>
    <string name="label_peso_objetivo">Peso objetivo</string>
    <string name="label_indice_de_masa_corporal">Índice de masa corporal</string>
    <string name="label_mi_estado_f_sico">Mi estado físico</string>
    <string name="label_mis_requisitos_nutricionales">Mis requisitos nutricionales</string>
    <string name="label_distribuci_n_de_mi_consumo_cal_rico">Distribución de mi consumo calórico</string>
    <string name="label_macronutriente">Macronutriente</string>
    <string name="label_gramos">Gramos</string>
    <string name="label_kcal">Kcal</string>
    <string name="label_l_pidos">Lípidos</string>
    <string name="label_lip">LIP</string>
    <string name="label_prot">PROT</string>
    <string name="label_proteinas">Proteínas</string>
    <string name="label_cho">CHO</string>
    <string name="labelcarbohidratos">Carbohidratos</string>
    <string name="label_t_diario">Total diario</string>
    <string name="label_resumen_de_los_macronutrientes">Resumen de los macronutrientes</string>
    <string name="label_mi_distribuci_n_de_kcal_por_comida">Mi distribución de kcal por comida</string>


    <string name="admob_app_id">-</string>
    <string name="admob_banner">-</string>
    <string name="admob_banner_config">-</string>
    <string name="admob_intersitial">-</string>
</resources>
