<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/linear_match_v"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_datos" />
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/container_cardview">
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/bg_button_gradient"/>
        <LinearLayout style="@style/linear_match_v">
            <LinearLayout
                style="@style/linear_h">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_logo"/>
            </LinearLayout>

            <ScrollView style="@style/container_scroll"
                android:elevation="50dp">
                <LinearLayout style="@style/container">
                    <LinearLayout
                        style="@style/linear_v"
                        android:baselineAligned="false"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                        <TextView
                            style="@style/label"
                            android:text="@string/label_mis_datos_actuales" />

                        <LinearLayout
                            style="@style/linear_h"
                            android:layout_marginTop="10dp">

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/et_peso"
                                style="@style/input_centered"
                                android:hint="@string/hint_peso"
                                android:inputType="numberDecimal" />

                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/et_altura"
                                style="@style/input_centered"
                                android:hint="@string/hint_altura"
                                android:inputType="numberDecimal"/>
                            <com.rengwuxian.materialedittext.MaterialEditText
                                android:id="@+id/et_edad"
                                style="@style/input_centered"
                                android:hint="@string/hint_edad"
                                android:inputType="numberDecimal"/>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/error_medidas"
                            style="@style/label_error"
                            android:visibility="gone"
                            android:text="@string/error_default_required"/>
                        <TextView
                            style="@style/label"
                            android:text="@string/label_sexo" />

                        <LinearLayout style="@style/linear_h"
                            android:baselineAligned="false">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">

                                <RelativeLayout
                                    android:layout_width="95dp"
                                    android:layout_height="95dp"
                                    android:layout_gravity="start">

                                    <View
                                        style="@style/match_match"
                                        android:alpha="0.8"
                                        android:background="@android:color/white"
                                        android:padding="20dp" />

                                    <TextView
                                        android:id="@+id/txt_men"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        style="@style/label_gender_select"
                                        android:text="@string/tv_hombre" />
                                    <View
                                        android:id="@+id/male"
                                        style="@style/match_match"
                                        android:background="@drawable/bg_gender_noselected" />
                                </RelativeLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center">

                                <RelativeLayout
                                    android:layout_width="95dp"
                                    android:layout_height="95dp"
                                    android:layout_gravity="start">

                                    <View
                                        style="@style/match_match"
                                        android:alpha="0.8"
                                        android:background="@android:color/white"
                                        android:padding="20dp" />

                                    <TextView
                                        android:id="@+id/txt_girl"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        style="@style/label_gender_select"
                                        android:text="@string/tv_mujer" />

                                    <View
                                        android:id="@+id/female"
                                        style="@style/match_match"
                                        android:background="@drawable/bg_gender_noselected" />
                                </RelativeLayout>
                            </LinearLayout>
                        </LinearLayout>
                        <TextView
                            android:id="@+id/genero"
                            style="@style/label_error"
                            android:visibility="gone"
                            android:text="@string/error_default_required"/>
                        <TextView
                            style="@style/label"
                            android:text="@string/mi_actividad_fisica_semanal" />

                        <LinearLayout style="@style/linear_h">
                            <LinearLayout
                                android:id="@+id/sedentaria"
                                style="@style/container_actividad_fisica">
                                <TextView
                                    style="@style/label_actividad_title"
                                    android:layout_weight="1"
                                    android:text="@string/txt_0_a_2_horas" />
                                <TextView
                                    style="@style/label_actividad_description"
                                    android:layout_weight="1"
                                    android:text="@string/txt_sedentaria" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/liviana"
                                style="@style/container_actividad_fisica">
                                <TextView
                                    style="@style/label_actividad_title"
                                    android:layout_weight="1"
                                    android:text="@string/txt_3_a_5_horas" />
                                <TextView
                                    style="@style/label_actividad_description"
                                    android:layout_weight="1"
                                    android:text="@string/txt_liviana" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout style="@style/linear_h">
                            <LinearLayout
                                android:id="@+id/moderada"
                                style="@style/container_actividad_fisica">
                                <TextView
                                    style="@style/label_actividad_title"
                                    android:layout_weight="1"
                                    android:text="@string/txt_6_a_27_horas" />
                                <TextView
                                    style="@style/label_actividad_description"
                                    android:layout_weight="1"
                                    android:text="@string/txt_moderada" />
                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/intensa"
                                style="@style/container_actividad_fisica">
                                <TextView
                                    style="@style/label_actividad_title"
                                    android:layout_weight="1"
                                    android:text="@string/txt_28_horas" />
                                <TextView
                                    style="@style/label_actividad_description"
                                    android:layout_weight="1"
                                    android:text="@string/txt_intensa" />
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/mi_actividad_fisica"
                            style="@style/label_error"
                            android:visibility="gone"
                            android:text="@string/error_default_required"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                card_view:cardElevation="20dp">

                <com.andexert.library.RippleView
                    android:id="@+id/more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/button_ripple"
                    android:padding="8dp">

                    <Button
                        android:id="@+id/btn_calcular"
                        style="@style/primary_button"
                        android:text="@string/btn_calcular" />
                </com.andexert.library.RippleView>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_config"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:clickable="true"
        app:backgroundTint="#f5aa7e"
        app:srcCompat="@drawable/mi_conf"
        android:focusable="true"
        />
</FrameLayout>