<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".configuracion">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_datos" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/banner_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/admob_banner_config">
        </com.google.android.gms.ads.AdView>

        <android.support.v7.widget.CardView
            style="@style/container_cardview_config"
            android:layout_marginTop="20dp">

            <LinearLayout style="@style/linear_v">
                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_configutarion"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:layout_weight="1"
                    android:background="@drawable/bg_gradient"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/AppTheme.PopupOverlay"
                    app:titleTextColor="@android:color/white"
                    app:title="@string/mi_configuracion_title">
                </android.support.v7.widget.Toolbar>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <LinearLayout
                        style="@style/container"
                        android:background="@android:color/white">
                        <TextView
                            style="@style/label_title"
                            android:text="@string/preferencias_de_datos"/>
                        <LinearLayout
                            style="@style/linear_v">
                            <TextView
                                style="@style/label_dark_gray_quick"
                                android:layout_weight="1"
                                android:text="@string/mi_unidad_de_medida"/>
                            <org.angmarch.views.NiceSpinner
                                android:id="@+id/sp_medidas"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"

                                android:gravity="center"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@android:color/darker_gray" />
                        </LinearLayout>

                        <TextView
                            style="@style/label_title"
                            android:layout_marginTop="40dp"
                            android:text="@string/preferencias_del_dispositivo"/>
                        <LinearLayout
                            style="@style/linear_h">
                            <TextView
                                style="@style/label_dark_gray_quick"
                                android:layout_weight="1"
                                android:text="@string/habilitar_vibracion"/>
                            <Switch
                                android:id="@+id/sw_vibracion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"/>
                        </LinearLayout>
                        <LinearLayout
                            style="@style/linear_h">
                            <TextView
                                style="@style/label_dark_gray_quick"
                                android:layout_weight="1"
                                android:text="@string/habilitar_sonido"/>
                            <Switch
                                android:id="@+id/sw_sonido"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"/>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
                <com.andexert.library.RippleView
                    android:id="@+id/more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/button_ripple"
                    android:background="@android:color/white"
                    android:layout_gravity="bottom"
                    android:layout_weight="1"
                    android:padding="8dp">
                    <Button
                        android:id="@+id/btn_actualizar_preferencias"
                        style="@style/primary_button"
                        android:text="@string/actualizar" />
                </com.andexert.library.RippleView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</FrameLayout>