<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/container_cardview_tabbed">
        <LinearLayout style="@style/linear_v">
            <TextView
                style="@style/label_title"
                android:text="@string/label_mi_estado_f_sico"
                android:textAlignment="center"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary"
                android:layout_weight="0"
                />
    <ScrollView
        style="@style/container_scroll_match_match"
        android:background="@android:color/white">
        <LinearLayout
            style="@style/container_small_padding">
            <TextView
                android:id="@+id/txt_diferencia_peso"
                android:background="@drawable/bg_comida"
                style="@style/label_dark_gray_quick_clear"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="6dp"
                android:text="Estás X sobre tu peso ideal"/>
            <LinearLayout
                style="@style/linear_h"
                android:background="@drawable/bg_gradient_3_pastel"
                android:paddingBottom="5dp"
                android:paddingEnd="30dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="6dp"
                    android:src="@drawable/ic_heart"/>
                <LinearLayout
                    style="@style/linear_v"
                    android:layout_weight="1">
                    <TextView
                        style="@style/label_title_white"
                        android:text="@string/label_indice_de_masa_corporal"/>
                    <TextView
                        android:id="@+id/txt_imc_legend"
                        style="@style/label_subtitle_white"
                        android:text="Sin calcular"/>
                    <TextView
                        android:id="@+id/txt_imc_number"
                        style="@style/number_white"
                        android:textAlignment="textEnd"
                        android:text="0"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/linear_h"
                android:background="@drawable/bg_gradient_2_pastel_horizontal"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="5dp"
                android:paddingEnd="30dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:padding="6dp"
                    android:src="@drawable/ic_flag"/>
                <LinearLayout
                    style="@style/linear_v"
                    android:layout_weight="1">
                    <TextView
                        style="@style/label_title_white"
                        android:textAlignment="textStart"
                        android:text="@string/label_peso_objetivo"/>
                    <LinearLayout
                        style="@style/linear_h"
                        android:gravity="end">
                        <TextView
                            android:id="@+id/txt_peso_objetivo"
                            style="@style/number_wrap_white_bold"
                            android:text="0"/>
                        <TextView
                            android:id="@+id/txt_medida_peso_objetivo"
                            style="@style/label_medition"
                            android:layout_gravity="bottom"
                            android:text="kg"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/linear_h"
                android:layout_marginTop="10dp"
                android:baselineAligned="false">

                <LinearLayout
                    style="@style/linear_v"
                    android:background="@drawable/bg_gradient_2_pastel"
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_minimo_aceptable"/>
                    <LinearLayout
                        style="@style/linear_h"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/txt_peso_minimo"
                            style="@style/number_wrap_white_bold"
                            android:text="0"/>
                        <TextView
                            android:id="@+id/txt_medida_peso_minimo_aceptable"
                            style="@style/label_medition"
                            android:layout_gravity="bottom"
                            android:text="kg"/>
                    </LinearLayout>
                    <TextView
                        style="@style/label_subtitle_white"
                        android:text="@string/label_minimo_aceptable"
                        android:layout_marginBottom="5dp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/linear_v"
                    android:background="@drawable/bg_gradient_3_pastel"
                    android:layout_margin="2dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_medal"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="85dp"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/ic_peso_ideal"/>
                    <LinearLayout
                        style="@style/linear_h"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/txt_peso_ideal"
                            style="@style/number_wrap_white_bold"
                            android:text="0"/>
                        <TextView
                            android:id="@+id/txt_medida_peso_ideal"
                            style="@style/label_medition"
                            android:layout_gravity="bottom"
                            android:text="kg"/>
                    </LinearLayout>
                    <TextView
                        style="@style/label_title_white"
                        android:text="@string/label_peso_ideal"
                        android:layout_marginBottom="5dp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/linear_v"
                    android:background="@drawable/bg_gradient_2_pastel"
                    android:layout_margin="2dp"
                    android:padding="5dp"
                    android:layout_weight="1">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:padding="15dp"
                        android:src="@drawable/ic_maximo_aceptable"/>
                    <LinearLayout
                        style="@style/linear_h"
                        android:gravity="center">
                        <TextView
                            android:id="@+id/txt_peso_maximo"
                            style="@style/number_wrap_white_bold"
                            android:text="0"/>
                        <TextView
                            android:id="@+id/txt_peso_maximo_aceptable"
                            style="@style/label_medition"
                            android:layout_gravity="bottom"
                            android:text="kg"/>
                    </LinearLayout>
                    <TextView
                        style="@style/label_subtitle_white"
                        android:text="@string/label_peso_m_ximo_aceptable"
                        android:layout_marginBottom="5dp"
                        android:textAlignment="center"/>
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>